--- a/mindex2.html
+++ b/mindex2.html
@@ -632,15 +632,13 @@
             if (isMobile && isLandscapeMode) {
                 // Сокращенный текст для мобильных устройств в альбомной ориентации
                 howToPlayModalBody.innerHTML = `
-                    <p>Инструкция к игре:</p>
+                    <p>Инструкция к игре «Угадай бренд по слогану»:</p>
                     <ol>
-                        <li>Нажмите «Начать игру»</li>
-                        <li>Выберите правильный бренд</li>
-                        <li>Удаляйте неправильные ответы</li>
-                        <li>Следите за временем</li>
-                        <li>Смотрите статистику</li>
+                        <li>Нажмите кнопку «Начать игру»</li>
+                        <li>Прочитайте слоган и выберите бренд</li>
+                        <li>Смахните неправильные ответы с экрана</li>
+                        <li>Следите за временем, у вас 3 попытки</li>
                     </ol>
-                    <p>У вас 3 попытки!</p>
                 `;
             } else {
                 // Полный текст для ПК и портретной ориентации
