--- a/mindex2.html
+++ b/mindex2.html
@@ -480,8 +480,8 @@
         }
 
         #how-to-play-modal .modal-body {
-            padding: 20px;
-            text-align: left;
+			padding: 20px 20px 5px 20px;
+			text-align: left;
         }
 
         #how-to-play-modal .modal-body p {
@@ -501,7 +501,7 @@
         }
 
         #how-to-play-modal .modal-footer {
-            padding: 20px;
+			padding: 5px 20px 20px 20px;
             text-align: center;
         }
 
@@ -633,7 +633,6 @@
             if (isMobile && isLandscapeMode) {
                 // Сокращенный текст для мобильных устройств в альбомной ориентации
                 howToPlayModalBody.innerHTML = `
-                    <p>Инструкция к игре «Угадай бренд по слогану»:</p>
                     <ol>
                         <li>Нажмите кнопку «Начать игру»</li>
                         <li>Прочитайте слоган и выберите бренд</li>
